# x-algorithm-no-bullshit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: config.yml  evidence-correction.yml  new-claim.yml
.github/workflows/: ci.yml  upstream-drift.yml
claims/: README.md  claims.json  schema.json
contracts/: x-post-optimize.request.schema.json  x-post-optimize.response.schema.json
contracts/examples/: request.json  response.json
docs/: agent-contract.md  launch-kit.md
scripts/: check_upstream.py  generate_cards.py  verify_sources.py
skills/x-post-optimizer/: SKILL.md
src/xnb/: __init__.py  __main__.py  cli.py  registry.py
tests/: test_claims.py  test_cli.py  test_contracts.py  test_readme_links.py  test_source_verifier.py
