[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "x-algorithm-no-bullshit"
version = "0.1.0"
description = "Evidence-checked claims and agent workflows for X's open-source For You algorithm"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "X Algorithm: No Bullshit contributors" }]
keywords = ["x", "twitter", "recommendation", "algorithm", "agents", "social-media"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []
[project.optional-dependencies]
dev = ["jsonschema>=4.23,<5", "ruff>=0.12,<1"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
[tool.ruff.lint.per-file-ignores]
"scripts/generate_cards.py" = ["E501"]
"tests/test_cli.py" = ["E402"]

[project.scripts]
xnb = "xnb.cli:main"

[project.urls]
Homepage = "https://github.com/berkshirehathaways/x-algorithm-no-bullshit"
Source = "https://github.com/berkshirehathaways/x-algorithm-no-bullshit"
Issues = "https://github.com/berkshirehathaways/x-algorithm-no-bullshit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/xnb" = ["claims/claims.json", "claims/schema.json"]
